force-app/main/default/objects/Connection_Point__c/Connection_Point__c.object-meta.xml
<CustomObject>
    <label>Connection Point</label>
    <nameField>
        <label>Connection ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connection Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>