force-app/main/default/objects/Connection_Point__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Connection Points</relationshipLabel>
    <relationshipName>Connection_Points</relationshipName>
    <type>Lookup</type>
</CustomField>