force-app/main/default/objects/Connection_Point__c/fields/Central_Protection_Control__c.field-meta.xml
<CustomField>
    <fullName>Central_Protection_Control__c</fullName>
    <label>Central Protection and Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>