force-app/main/default/objects/Connection_Point__c/fields/Customer_Supply_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_Supply_State__c</fullName>
    <label>Customer Supply State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>