force-app/main/default/objects/Connection_Point__c/fields/Customer_Supply_Street__c.field-meta.xml
<CustomField>
    <fullName>Customer_Supply_Street__c</fullName>
    <label>Customer Supply Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>