force-app/main/default/objects/Connection_Point__c/fields/Customer_Supply_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Customer_Supply_Suburb__c</fullName>
    <label>Customer Supply Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>