force-app/main/default/objects/Connection_Point__c/fields/Export_Limitation_kVA__c.field-meta.xml
<CustomField>
    <fullName>Export_Limitation_kVA__c</fullName>
    <label>Export Limitation (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>