force-app/main/default/objects/Connection_Point__c/fields/Haus_Num_2__c.field-meta.xml
<CustomField>
    <fullName>Haus_Num_2__c</fullName>
    <label>Haus Num 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>