force-app/main/default/objects/Connection_Point__c/fields/House_Num_2__c.field-meta.xml
<CustomField>
    <fullName>House_Num_2__c</fullName>
    <label>House Num 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>