force-app/main/default/objects/Connection_Point__c/fields/Inter_Trip_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Inter_Trip_Scheme__c</fullName>
    <label>Inter-Trip Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>