force-app/main/default/objects/Connection_Point__c/fields/Islandable_Installation__c.field-meta.xml
<CustomField>
    <fullName>Islandable_Installation__c</fullName>
    <label>Islandable Installation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>