force-app/main/default/objects/Connection_Point__c/fields/Neutral_Voltage_Displacement__c.field-meta.xml
<CustomField>
    <fullName>Neutral_Voltage_Displacement__c</fullName>
    <label>Neutral Voltage Displacement</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>