force-app/main/default/objects/Connection_Point__c/fields/NMI__c.field-meta.xml
<CustomField>
    <fullName>NMI__c</fullName>
    <externalId>true</externalId>
    <label>NMI</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>