force-app/main/default/objects/Connection_Point__c/fields/NMI_Address_fx__c.field-meta.xml
<CustomField>
    <fullName>NMI_Address_fx__c</fullName>
    <formula>IF(NMI_Ref__c != &quot;&quot;, 
IF (NOT(ISBLANK(Building_Name__c)), Building_Name__c &amp; (&quot;, &quot;), &quot;&quot;) &amp;
IF (NOT(ISNULL(House_Num_2__c)), House_Num_2__c &amp; &quot; &quot;, &quot;&quot;) &amp;
IF (NOT(ISNULL(Floor__c)), Floor__c &amp; &quot; &quot;, &quot;&quot;) &amp;
IF (NOT(ISNULL(Haus_Num_2__c)), Haus_Num_2__c &amp; &quot; &quot;, &quot;&quot;) &amp;
IF (NOT(ISNULL(House_Num_1__c)), House_Num_1__c &amp; &quot; &quot;, &quot;&quot;) &amp;
IF (NOT(ISNULL(Street__c)), Street__c, &quot;&quot;) &amp; (&quot;, &quot;) &amp;
IF (NOT(ISNULL(City__c)), City__c &amp; (&quot;, &quot;), &quot;&quot;) &amp;
IF (NOT(ISNULL(State__c)), State__c &amp; &quot; &quot;, &quot;&quot;) &amp;
IF (NOT(ISNULL(Post_Code__c)), Post_Code__c, &quot;&quot;) &amp; (&quot;, &quot;)
&amp; CASE(Country__c,&quot;AU&quot;,&quot;Australia&quot;,&quot; &quot;), 
&quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NMI Address</label>
    <type>Text</type>
</CustomField>