force-app/main/default/objects/Connection_Point__c/fields/NMI_Ref__c.field-meta.xml
<CustomField>
    <fullName>NMI_Ref__c</fullName>
    <label>NMI Ref</label>
    <length>255</length>
    <referenceTo>NmiDataSets__x</referenceTo>
    <relationshipLabel>Connection Points</relationshipLabel>
    <relationshipName>Connection_Points</relationshipName>
    <type>ExternalLookup</type>
</CustomField>