force-app/main/default/objects/Connection_Point__c/fields/Over_Freq_Protection__c.field-meta.xml
<CustomField>
    <fullName>Over_Freq_Protection__c</fullName>
    <label>Over-Frequency Protection (F&gt;)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>