force-app/main/default/objects/Connection_Point__c/fields/Overvolt_Protection_1__c.field-meta.xml
<CustomField>
    <fullName>Overvolt_Protection_1__c</fullName>
    <label>Overvoltage Protection 1 (V&gt;)</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>