force-app/main/default/objects/Connection_Point__c/fields/Overvolt_Protection_1_Delay__c.field-meta.xml
<CustomField>
    <fullName>Overvolt_Protection_1_Delay__c</fullName>
    <label>Overvoltage Protection 1 Delay (V&gt;)</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>