force-app/main/default/objects/Connection_Point__c/fields/Ph_C_Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Ph_C_Total_Capacity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Phase C Total Capacity (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>