force-app/main/default/objects/Connection_Point__c/fields/Phase_Amount_Available__c.field-meta.xml
<CustomField>
    <fullName>Phase_Amount_Available__c</fullName>
    <label>Amount of Phases available</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>