force-app/main/default/objects/Connection_Point__c/fields/Phase_B_Total_System_Export__c.field-meta.xml
<CustomField>
    <fullName>Phase_B_Total_System_Export__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Phase B Total System Export (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>