force-app/main/default/objects/Connection_Point__c/fields/Phases__c.field-meta.xml
<CustomField>
    <fullName>Phases__c</fullName>
    <label>Phase(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>3 Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>