force-app/main/default/objects/Connection_Point__c/fields/Power_Factor__c.field-meta.xml
<CustomField>
    <fullName>Power_Factor__c</fullName>
    <label>Power Factor with Generation</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>