force-app/main/default/objects/Connection_Point__c/fields/Protect_Relay_Comm_Method__c.field-meta.xml
<CustomField>
    <fullName>Protect_Relay_Comm_Method__c</fullName>
    <label>Protection Relay Communication Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Wired</fullName>
            </value>
            <value>
                <fullName>Wireless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>