force-app/main/default/objects/Connection_Point__c/fields/Protect_Relay_Location__c.field-meta.xml
<CustomField>
    <fullName>Protect_Relay_Location__c</fullName>
    <label>Protection Relay Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>