force-app/main/default/objects/Connection_Point__c/fields/Protect_Relay_Model__c.field-meta.xml
<CustomField>
    <fullName>Protect_Relay_Model__c</fullName>
    <label>Protection Relay Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>