force-app/main/default/objects/Connection_Point__c/fields/Rate_of_Change_of_Freq__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Change_of_Freq__c</fullName>
    <label>Rate of Change of Frequency (RoCoF)</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>