force-app/main/default/objects/Connection_Point__c/fields/Registered_Generator__c.field-meta.xml
<CustomField>
    <fullName>Registered_Generator__c</fullName>
    <label>Registered Generator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>