force-app/main/default/objects/Connection_Point__c/fields/Signal_Loss_Action_Open_PV_Replay__c.field-meta.xml
<CustomField>
    <fullName>Signal_Loss_Action_Open_PV_Replay__c</fullName>
    <label>Action on Signal Loss OPEN PV Replay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>