force-app/main/default/objects/Connection_Point__c/fields/SOP_33_06_Compliant__c.field-meta.xml
<CustomField>
    <fullName>SOP_33_06_Compliant__c</fullName>
    <label>SOP 33-06 Compliant?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>