force-app/main/default/objects/Connection_Point__c/fields/Total_System_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Capacity__c</fullName>
    <formula>Ph_A_Total_Capacity__c + Ph_B_Total_Capacity__c + Ph_C_Total_Capacity__c + Ph_Unk_Total_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total System Capacity (kVA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>