force-app/main/default/objects/Connection_Point__c/fields/Total_System_Export__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Export__c</fullName>
    <description>Shows the Total System Export for all AC Connections</description>
    <formula>Phase_A_Total_System_Export__c + Phase_B_Total_System_Export__c + Phase_C_Total_System_Export__c + Phase_Unk_Total_System_Export__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total System Export (kVA)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>