force-app/main/default/objects/Connection_Point__c/fields/Under_Freq_Protection__c.field-meta.xml
<CustomField>
    <fullName>Under_Freq_Protection__c</fullName>
    <label>Under-Frequency Protection (F&lt;)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>