force-app/main/default/objects/Connection_Point__c/fields/Under_Freq_Protection_Delay__c.field-meta.xml
<CustomField>
    <fullName>Under_Freq_Protection_Delay__c</fullName>
    <label>Under-Frequency Protection Delay (F&lt;)</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>