force-app/main/default/objects/Connection_Point__c/fields/Volt_Vector_Shift__c.field-meta.xml
<CustomField>
    <fullName>Volt_Vector_Shift__c</fullName>
    <label>Voltage Vector Shift</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>