force-app/main/default/objects/Connection_Point__c/fields/Wireless_Model__c.field-meta.xml
<CustomField>
    <fullName>Wireless_Model__c</fullName>
    <label>Wireless Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>