force-app/main/default/objects/Connection_Point__c/recordTypes/Electricity.recordType-meta.xml
<RecordType>
    <fullName>Electricity</fullName>
    <active>true</active>
    <label>Electricity</label>
</RecordType>