force-app/main/default/objects/Connection_Point__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NMI__c</columns>
    <columns>NMI_Address_fx__c</columns>
    <columns>NMI_Ref__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>